[package]
name = "angle"
version = "0.1.0"
authors = ["arturo castro <me@arturocastro.net>"]
description = "Angle wrapper to avoid ambiguous parameters + common operation over angles like wrapping, comparisons, arithmetic operations, trigonometric operations and conversions between rad and deg."
license = "MIT"
readme = "README.md"

[dependencies]
num = "*"
