[package]
name = "angle"
version = "0.3.4"
authors = ["arturo castro <me@arturocastro.net>"]
description = "Angle wrapper to avoid ambiguous parameters + common operation over angles like wrapping, comparisons, arithmetic operations, trigonometric operations and conversions between rad and deg."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/arturoc/angle-rs"
documentation = "https://docs.rs/angle"
repository = "https://github.com/arturoc/angle-rs"

[dependencies]
num-traits = "0.1.40"
serde = "1.0"
serde_derive = "1.0"
